--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -175,13 +175,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="@drawable/orange_btn_selector"
+            android:background="@drawable/generate_otp"
             android:minWidth="90dp"
             android:paddingEnd="15dp"
             android:visibility="invisible"
             android:paddingStart="15dp"
             android:text="@string/btn_text_OTP"
-            android:textColor="@android:color/white"
+            android:textColor="@drawable/generate_otp_text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/backgroundPhone"/>
