--- a/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
@@ -74,7 +74,7 @@
     <integer name="show_call_in_otp">@integer/view_visible</integer>
     <integer name="show_driver_timer">@integer/view_invisible</integer>
 
-    <integer name="driver_logout_enabled">1</integer>
+    <integer name="driver_logout_enabled">@integer/view_visible</integer>
     <integer name="like_us_on_fb_enabled">@integer/view_visible</integer>
     <bool name="use_fugu_key_hardcode">true</bool>
 
