--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -162,7 +162,7 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="40px"
-                            android:background="@drawable/edit_pencil_icon"
+                            android:src="@drawable/edit_pencil_icon"
                             android:tag="mwar"/>
 
                     </RelativeLayout>
