--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -50,6 +50,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30px"
+                        android:paddingStart="40px"
+                        android:paddingEnd="40px"
+                        android:gravity="center"
                         android:text="@string/nl_otp_please_enter_otp"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/text_size_32" />
