--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_edittext.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_edittext.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/rv"
              xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="720px"
-             android:layout_height="1134px"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
              android:orientation="vertical"
              android:splitMotionEvents="false"
+                android:tag="@string/dont_touch_me"
     >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="30px"
+        android:layout_margin="25dp"
         android:background="@drawable/dialog_background_color"
         android:splitMotionEvents="false"
         android:layout_centerInParent="true"
@@ -20,11 +21,9 @@
 
         <LinearLayout
             android:id="@+id/rl1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60px"
             android:orientation="vertical"
-            android:paddingBottom="40px"
             android:splitMotionEvents="false"
 
             >
@@ -33,16 +32,12 @@
                 android:id="@+id/textHead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:paddingStart="40px"
-                android:paddingEnd="40px"
+                android:padding="20dp"
                 android:text="@string/confirmation_code"
                 android:textColor="@color/themeColor"
-                android:textSize="50px"
-
-                />
+                style="@style/TextTitle"/>
 
 
             <TextView
@@ -50,34 +45,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20px"
                 android:gravity="center"
-                android:paddingStart="40px"
-                android:paddingEnd="40px"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:text="@string/check_your_registered_email_phone_number_for_otp"
-                android:textColor="@color/black"
-                android:textSize="32px"
+                style="@style/TextNormal"
 
                 />
 
 
             <EditText
                 android:id="@+id/etCode"
-                android:layout_width="480px"
-                android:layout_height="105px"
+                android:layout_width="240dp"
+                android:layout_height="52dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30px"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_background"
                 android:gravity="center"
                 android:hint="@string/enter_code"
-                android:inputType="number"
-                android:paddingStart="30px"
-                android:paddingEnd="30px"
+                android:inputType="numberDecimal"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                style="@style/TextLarge"
                 android:textColor="@color/black"
                 android:textCursorDrawable="@null"
-                android:textSize="38px"
-
-
                 />
 
 
@@ -88,6 +79,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="@string/done"
+                android:layout_marginBottom="20dp"
                 />
 
 
