--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
@@ -12,7 +12,7 @@
         android:layout_height="102dp"
         android:src="@drawable/splash_top_bg"
         android:scaleType="fitXY"
-        android:visibility="@integer/splash_scene_bg_visibility"
+        android:visibility="@integer/splash_scene_top_bg_visibility"
         />
 
     <ImageView
@@ -30,11 +30,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="102dp"
+        android:layout_height="104dp"
+        android:scaleType="@integer/scale_type"
         android:src="@drawable/splash_bottom_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:scaleType="fitXY"
-        android:visibility="@integer/splash_scene_bg_visibility"
-        />
+        android:visibility="@integer/splash_scene_bottom_bg_visibility"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
