stripe_integration: UI done, apis left for wallet

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_stripe_cards.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_stripe_cards.xml
@@ -4,4 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <fragment
+        android:name="product.clicklabs.jugnoo.driver.stripe.wallet.StripeWalletFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </FrameLayout>
