--- a/JugnooNewDriver/jugnooNewDriver/src/hezz/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hezz/res/values/values-wl.xml
@@ -75,5 +75,5 @@
 
     <color name="themeColor">#CF312F</color>
     <color name="themeColorLight">#bbCF312F</color>
-    <string name="default_lang">français</string>
+    <string name="default_lang">fr</string>
 </resources>
