--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_wallet.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_wallet.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/rootLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -67,7 +74,7 @@
 
     <TextView
         android:id="@+id/tvAddCard"
-        style="@style/TextNormal"
+        style="@style/TextLarge"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="start"
@@ -76,6 +83,10 @@
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:text="@string/label_add_card"
+        android:clickable="true"
+        android:focusable="true"
+        android:drawableEnd="@drawable/ic_navigate_next_black_18dp"
+        android:background="@drawable/background_white_selector"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/labelCardDetails" />
@@ -85,6 +96,7 @@
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingBottom="10dp"
+        android:visibility="gone"
         android:text="@string/no_cards_linked"
         app:layout_constraintTop_toBottomOf="@id/tvAddCard"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +108,6 @@
         android:id="@+id/dividerBelowAddCard"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="10dp"
         android:background="@color/bgColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,15 +154,13 @@
         app:layout_constraintTop_toTopOf="@id/labelAddCash" />
 
 
-    <TextView
+    <product.clicklabs.jugnoo.driver.widgets.PrefixedTextView
         android:id="@+id/tvHintAmountTwo"
         style="@style/TextNormal"
         tools:text="400"
         android:paddingTop="10dp"
         android:gravity="center"
         android:paddingBottom="10dp"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/button_white_grey_border"
         app:layout_constraintStart_toEndOf="@+id/tvHintAmountOne"
@@ -162,7 +171,7 @@
         android:layout_marginStart="15dp"
         android:layout_height="wrap_content" />
 
-    <TextView
+    <product.clicklabs.jugnoo.driver.widgets.PrefixedTextView
         android:id="@+id/tvHintAmountOne"
         tools:text="100"
         android:paddingTop="10dp"
@@ -178,7 +187,7 @@
         android:layout_height="wrap_content" />
 
 
-    <TextView
+    <product.clicklabs.jugnoo.driver.widgets.PrefixedTextView
         android:id="@+id/tvHintAmountThree"
         style="@style/TextNormal"
         tools:text="500"
@@ -193,7 +202,7 @@
         android:layout_height="wrap_content" />
 
     
-    <EditText
+    <product.clicklabs.jugnoo.driver.widgets.PrefixedEditText
         android:id="@+id/edtAmount"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tvHintAmountTwo"
@@ -223,8 +232,15 @@
 
 
     <android.support.constraint.Group
-        app:constraint_referenced_ids="btnAddCash,edtAmount,tvHintAmountThree,tvHintAmountTwo,tvHintAmountOne
-        ,labelAddCash,currentBalanceDividerStart,currentBalanceDividerEnd"
+        android:id="@+id/groupAddCash"
+        app:constraint_referenced_ids="btnAddCash,edtAmount,labelAddCash,currentBalanceDividerStart,currentBalanceDividerEnd"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content" />
+
+    <android.support.constraint.Group
+        android:id="@+id/groupQuickAmounts"
+        app:constraint_referenced_ids="tvHintAmountThree,tvHintAmountTwo,tvHintAmountOne"
         android:layout_width="wrap_content"
         android:visibility="visible"
         android:layout_height="wrap_content" />
@@ -236,3 +252,4 @@
 
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
