--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_stripe_cards.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_stripe_cards.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/container"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/frag_wallet"
-        android:tag="StripeWalletFragment"
-        android:name="product.clicklabs.jugnoo.driver.stripe.wallet.StripeWalletFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
-</FrameLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/frag_wallet"
+            android:tag="StripeWalletFragment"
+            android:name="product.clicklabs.jugnoo.driver.stripe.wallet.StripeWalletFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.design.widget.CoordinatorLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
