--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -24,6 +24,7 @@
         style="@style/TextTitle"
         android:autoSizeTextType="uniform"
         android:layout_toEndOf="@+id/backBtn"
+        android:layout_marginEnd="38dp"
         android:layout_alignParentEnd="true"
         />
 
