--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24px"
-                android:text="llllllllllllll"
+                android:text="HEAD"
                 android:textColor="@color/textColorTitle"
                 android:textSize="40px"/>
 
@@ -90,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24px"
-                    android:text="lll"
+                    android:text="Value1"
                     android:textColor="@color/textColor"
                     android:textSize="32px"/>
 
@@ -100,7 +100,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10px"
                     android:layout_toEndOf="@+id/textView1Value"
-                    android:text="llllllllllllll"
+                    android:text="View1"
                     android:textColor="@color/textColor"
                     android:textSize="32px"/>
 
@@ -120,7 +120,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24px"
-                    android:text="lll"
+                    android:text="Value 2"
                     android:textColor="@color/textColor"
                     android:textSize="30px"/>
 
@@ -130,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10px"
                     android:layout_toEndOf="@+id/textView2Value"
-                    android:text="llllllllllllll"
+                    android:text="View2"
                     android:textColor="@color/textColor"
                     android:textSize="30px"/>
 
@@ -152,7 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:text="70%"
+                    android:text="Value%"
                     android:textColor="@color/themeColor"
                     android:textSize="36px"/>
 
